# Palladium

./: .gitignore  CMakeLists.txt  README.md
cmake/static_analyzers/: clang_tidy.cmake
palladium/: CMakeLists.txt
palladium/include/palladium/: color.hpp  palladium.hpp
palladium/include/palladium/evaluation/: evaluation.hpp  parser.hpp
palladium/include/palladium/evaluation/core/: lexer.hpp  operators.hpp  parser.hpp  token.hpp
palladium/include/palladium/graphics/: elements.hpp
palladium/include/palladium/graphics/core/: layout.hpp
palladium/source/: CMakeLists.txt  main.cpp  palladium.cpp
palladium/source/evaluation/: evaluation.cpp  lexer.cpp  parser.cpp
palladium/source/evaluation/core/: lexer.cpp  parser.cpp
palladium/source/graphics/: elements.cpp
palladium/source/graphics/core/: layout.cpp
